--- a/KLS_WEB/KLS_WEB/Views/Clients/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Index.cshtml
@@ -60,7 +60,7 @@
                         <td>${nCon(key.id)}</td>
                         <td>${nCon(key.nombreComercial)}</td>
                         <td>${nCon(key.nombreCorto)}</td>
-                        <td>Ejecutivo</td>
+                        <td>GUSTAVO QA</td>
                         <td>${nCon(key.comentario)}</td>
                         <td>${statusTable(key.estatus)}</td>
                         <td class="text-center">
