--- a/KLS_WEB/KLS_WEB/Views/Clients/Others/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Others/Index.cshtml
@@ -4,10 +4,10 @@
 }
 @{ int id = ViewBag.id; }
 <div class="data-content p-4 text-left">
-    <div class="p-4">
+    <div class="p-1">
         <div class="d-flex flex-nowrap">
             <div class="p-2">
-                <div class="text-left d-flex p-2">
+                <div class="text-left d-flex">
                     <a href="/Clients/formClients/@id">
                         <div class="material-icons icon-red">arrow_back</div>
                     </a>
@@ -44,7 +44,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <h5>Mandatario</h5>
+                                <h5>Mandatorio</h5>
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input" id="Mandatario1" name="Mandatario1" value="true">
                                 </div>
