--- a/KLS_WEB/KLS_WEB/Views/Travels/_Servicios.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Servicios.cshtml
@@ -22,14 +22,14 @@
                             <div class="d-flex justify-content-between">
 
                                 <div class="form-group row mr-3 my-auto">
-                                    <label class="col-sm-3 col-form-label col-form-label-sm">COSTO</label>
-                                    <div class="col-sm-9 my-auto">
-                                        <input type="number" class="form-control form-control-sm costos" name="terrestrenacionalcosto" onkeyup="{ setCostos(this); }" onchange="{ this.value = parseFloat(this.value).toFixed(2); }" required>
+                                    <label class="col-5 col-form-label col-form-label-sm">COSTO $</label>
+                                    <div class="col-7 my-auto">
+                                        <input type="number" class="form-control form-control-sm costos" aria-describedby="tncosto" name="terrestrenacionalcosto" onkeyup="{ setCostos(this); }" onchange="{ this.value = parseFloat(this.value).toFixed(2); }" required>
                                     </div>
                                 </div>
                                 <div class="form-group row my-auto">
-                                    <label class="col-sm-6 col-form-label col-form-label-sm mr-0">PRECIO A CLIENTE</label>
-                                    <div class="col-sm-6 my-auto">
+                                    <label class="col-6 col-form-label col-form-label-sm mr-0">PRECIO A CLIENTE $</label>
+                                    <div class="col-6 my-auto">
                                         <input type="number" class="form-control form-control-sm precios" name="terrestrenacionalprecio" onkeyup="{ setPrecios(this); }" onchange="{ this.value = parseFloat(this.value).toFixed(2); }" required>
                                     </div>
                                 </div>
